# Tic-Tac-Toe

./: ghversion.py  out.json  pyproject.toml  requirements.txt  test_all.py  testversion.py  tictactoe (Github Version).py  tictactoe.py  tictactoe.spec
