[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = "tic tac toe bot"
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = "^3.8"
inquirer = "^2.7.0"
numpy = "^1.21.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
